actual-budget-1/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget-1
  namespace: actual-budget-1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`actual-budget.pimonlab.xyz`)
      priority: 10
      services:
        - name: actual-budget-1
          namespace: actual-budget-1
          port: 80
  tls:
    secretName: actual-budget-1-ts-secret
